# e-comerce-axum-starter

./: Cargo.toml
migrations/: 20251124145050_schema_init.sql
src/: main.rs  router.rs
src/auth/: handler.rs
src/cart/: handler.rs  model.rs
src/products/: handler.rs  model.rs
src/shared/: auth_guard.rs  mod.rs  utils.rs
src/users/: handler.rs
