[package]
name = "axum-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# SQLx untuk database (Postgres), opsional jika belum ada DB
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"
jsonwebtoken = "9.2" # Untuk membuat & baca token
argon2 = "0.5"       # Untuk hash password (standar industri, lebih aman dari bcrypt)
rand = "0.8"         # Helper untuk argon2
